--- a/frontend/src/Page/Home/Home.scss
+++ b/frontend/src/Page/Home/Home.scss
@@ -1,10 +1,5 @@
 .home-container{
     max-width: 1280px;
     margin: 0 auto;
-    padding: 32px 0;
-}
-@media screen and (max-width: 1279px){
-    .home-container{
-        padding: 32px 25px;
-    }
+    padding: 32px 25px;
 }
