--- a/frontend/src/Page/ProductList/ProductList.scss
+++ b/frontend/src/Page/ProductList/ProductList.scss
@@ -1,7 +1,7 @@
 .product-list-container{
     max-width: 1280px;
     margin: 0 auto;
-    padding: 32px 0;
+    padding: 32px 25px;
     .products-container-list{
         display: grid;
         grid-template-columns: repeat(1, minmax(0, 1fr));
@@ -115,11 +115,5 @@
                 margin: 0 auto;
             }
         }
-    }
-}
-
-@media screen and (max-width: 1279px){
-    .product-list-container{
-        padding: 32px 25px;
     }
 }
