--- a/frontend/src/Page/Profile/Profile.scss
+++ b/frontend/src/Page/Profile/Profile.scss
@@ -3,7 +3,7 @@
     height: fit-content;
     .profile{
         max-width: 1280px;
-        padding: 32px 0;
+        padding: 32px 25px;
         margin: 0 auto;
         display: flex;
         flex-direction: column;
@@ -45,13 +45,7 @@
         width: 100% !important;
     }
 }
-@media screen and (max-width: 1279px){
-    .profile-container{
-        .profile{
-            padding: 32px 25px;
-        }
-    }
-}
+
 @media screen and (min-width: 1024px) and (max-width: 1193px){
     .profile-container{
         .profile{
